# Silent-Speech-Recognition-SpeakSee

./: .gitattributes  .gitignore  Colab-Speak-See.ipynb  LICENSE  README.md  Speak-See.ipynb  main.py  pyproject.toml  requirements.txt
