[project]
name = "silent-speech-recognition-speaksee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "h5py>=3.10.0",
    "imageio>=2.37.2",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pandas>=2.1.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "tensorflow==2.15.0",
    "tensorflow-metal==1.1.0",
]
